# mashpy

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pilot  HOW_TO_DEPLOY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  SKILL.md  docker-compose.pilot.yml  docker-entrypoint.sh  entry.py  install.sh  pyproject.toml  release-please-config.json  requirements-docs.txt  zensical.toml
.claude/skills/triage/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-pilot.yml  docs.yml  pr-title.yml  project-auto-add.yml  publish.yml  release-pilot.yml  release-please.yml  testpypi.yml
.tmp/: mcp-1.20.0-py3-none-any.whl
.tmp/mcp-1.20.0.dist-info/: RECORD
docs/: building-agent-clis.md  index.md  product-brief.md
docs/design/: run-experiment-workflow.md  workflows-admin-ui.md  workflows-v2.md  workflows.md
docs/posts/: building-agent-clis.md  building-dynamic-hosts-apis.md  case-study-moma.html  case-study-pilot.html  composing-agents.md  concepts.md  durable-agent-loop.md  exploring-mash-with-pilot.md  host-api-and-cli.md  how-to-deploy.md  human-in-the-loop.md  mash-under-the-hood.md  memory-and-compaction.md  one-llm-contract.md  oss-models.md  persistence-store.md  product-brief.md  prompt-caching-token-meter.md  reading-a-trace.md  releasing.md  remote-tools-mcp.md  request-lifecycle.md  skills-on-demand.md  synthetic-evals.md  two-stores.md  workflows-and-task-state.md  workflows-as-step-pipelines.md
docs/review/: synthetic-evals-impl.md  synthetic-evals.md
docs/rfcs/: README.md  background-agents.md  h2a-durable-execution-proposal.md  host-to-agent-protocol.md
examples/: Dockerfile  README.md  __init__.py  _bootstrap.py  api_app.py  app_definition.py  command_app.py  example_app.py  simple_app.py  subagent_app.py
examples/skills/repo-audit/: SKILL.md
pilot/: Dockerfile  README.md  __init__.py  changelog.py  cli.py  prompt.py  spec.py  tools.py
pilot/skills/: changelog.md
scripts/: analyze_token_usage.sh  gen_cli_docs.py  validate_token_estimation.sh  verify_bash_guidance.sh  verify_local_repo.sh  verify_prompt_caching.sh  view_tool_calls.sh
src/apps/: README.md
src/apps/codebase/: __init__.py  cli.py  cli_v2.py  config.py  index.py  onboard.py  prompts.py  repomap.sh
src/apps/db/: README.md  __init__.py  cli.py  config.py  local_tools.py  prompt.py  test_local_tools.py
src/apps/plog/: __init__.py  cli.py
src/apps/pocket/: __init__.py  cli.py  config.py
src/mash/: AGENTS.md  README.md  __init__.py  agent.py  base.py  commands.py  context.py  logging.py  memory.py  render.py  repl.py  router.py  telemetry.py  tools.py
src/mash/agents/: AGENTS.md  README.md  __init__.py
src/mash/api/: AGENTS.md  README.md  __init__.py  admin_ui.py  app.py  config.py  logging.py  main.py  middleware.py  telemetry_ui.py  types.py
src/mash/cli/: AGENTS.md  README.md  __init__.py  app.py  chain_renderer.py  client.py  command_log.py  commands.py  config.py  default_commands.py  main.py  render.py  repl.py  shell.py  test_abstract_app.py  types.py
src/mash/core/: AGENTS.md  README.md  agent.py  config.py  context.py  database.py  llm.py
src/mash/evals/: README.md  __init__.py  metrics.py  models.py  service.py
src/mash/feedback/: AGENTS.md
src/mash/logging/: AGENTS.md  README.md  __init__.py  events.py  logger.py  trace_context.py
src/mash/mashd/: agent.py  llm_provider.py  models.py  runtime_tools.py  tools.py
src/mash/mcp/: AGENTS.md  README.md  __init__.py  client.py  host.py  manager.py  server.py  types.py
src/mash/memory/: AGENTS.md  README.md  __init__.py  compaction.py  ranker.py  signals.py  store.py  test_store_search.py  test_store_turn_lookup.py
src/mash/runtime/: AGENTS.md  README.md  __init__.py  client.py  context.py  definition.py  errors.py  factory.py  host.py  http.py  requests.py  runtime.py  server.py  service.py  session.py  spec.py  structured_output.py  types.py
src/mash/skills/: AGENTS.md  README.md  __init__.py  base.py  registry.py  tool.py
src/mash/storage/: __init__.py
src/mash/telemetry/: AGENTS.md  README.md  __init__.py  __main__.py  server.py  test_server.py  ui_loader.py
src/mash/testing/: __init__.py  runtime_fixtures.py
src/mash/tools/: AGENTS.md  README.md  ask_user.py  base.py  bash.py  mcp.py  registry.py  runtime.py  subagent.py  test_runtime.py  web_search.py
src/mash/workflows/: AGENTS.md  README.md  __init__.py  dbos.py  engine.py  registry.py  service.py  spec.py  store.py  strategy.py
src/mash_legacy/: README.md  base.py  context.py  how_to_agents.md  logging.py  memory.py
src/mash_legacy/mashd/: README.md  __init__.py  agent.py  bash_session.py  (+3 more)
src/mashnet/: README.md  __init__.py  client.py  host.py
src/mashpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pilot/: changelog.py  cli.py  prompt.py  spec.py  store.py  tools.py
tests/: conftest.py
tests/pilot/: test_changelog.py  test_pilot_spec.py  test_spec.py
(+330 files in other folders)
