[project]
name = "mashpy"
version = "0.6.1"
description = "SDK for building hosted multi-agent Mash applications."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{ name = "imsid" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
keywords = ["agents", "cli", "mcp", "llm"]

dependencies = [
  "aiosqlite>=0.20.0",
  "anthropic>=0.39.0",
  "dbos>=2.19.0",
  "fastapi>=0.115.0",
  "google-genai>=0.1.0",
  "httpx>=0.28.0",
  "mcp>=0.1.0",
  "openai>=1.57.4",
  "psycopg[binary]>=3.2.0",
  "psycopg_pool>=3.2.0",
  "prompt_toolkit>=3.0.36",
  "PyYAML>=6.0.2",
  "requests>=2.31.0",
  "rich>=13.7.1",
  "starlette>=0.52.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/imsid/mashpy"
Documentation = "https://github.com/imsid/mashpy#readme"
Repository = "https://github.com/imsid/mashpy"

[project.scripts]
mash = "mash.cli.main:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0",
  "twine>=6.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["mash*"]
exclude = ["apps*", "tests*"]

[tool.setuptools.package-data]
"mash.api" = ["static/telemetry/**/*"]
"mash.agents.masher" = [
  "skills/*/SKILL.md",
  "skills/*/references/**/*",
  "skills/*/assets/**/*",
]
